...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.calendar.Add_Medicine_Page"
    android:id="@+id/Add_Medicine_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
...
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/NameTV"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <Button
        android:id="@+id/MFromDays"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:elevation="0dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/SetDayApp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calIcon"
        app:layout_constraintTop_toBottomOf="@+id/DateTV" />

    <!--<TextView
...
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_clock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

    <Button
        android:id="@+id/MTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/montserrat"
        android:text="@string/SetTimeApp"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cloIcon"
        app:layout_constraintTop_toBottomOf="@+id/TimeTV" />

    <TextView
...
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_tablet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DoseTV" />

    <EditText
        android:id="@+id/MedicineDose"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edit_text"
...
        android:text="@string/RepMed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pillIcon" />

    <Spinner
        android:id="@+id/repeatType"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_below="@id/RepeatView"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/darkAccent"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repeatInterval"
        app:layout_constraintTop_toBottomOf="@+id/RepeatView" />

    <ImageView
        android:id="@+id/repeatIcon"
        android:layout_width="35dp"
        android:layout_height="35dp"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/timesMed"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/repeatNO"
        app:layout_constraintTop_toBottomOf="@+id/repeatType" />

    <EditText
        android:id="@+id/repeatNO"
        android:layout_width="50dp"
        android:layout_height="40dp"
...
        android:text=""
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/repeatInterval" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/main_button"
        android:fontFamily="@font/montserrat"
...
