...
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
...
    <!-- Add Appointment Reminder Page -->
    <string name="AddApp">New Appointment</string>
    <string name="TitleApp">Title</string>
    <string name="DayApp">Day</string>
    <string name="TimeApp">Time</string>
    <string name="SetDayApp">Set Day</string>
    <string name="SetTimeApp">Set Time</string>
    <string name="SaveApp">Confirm</string>
    <string name="CurrentTime">The chosen time must after now</string>
    <string name="AppSavedSuccess">The Appointment Reminder Saved Successfully</string>
    <string name="AppSavedFialed">The Appointment Reminder Did not Saved, Try Again</string>

    <!-- Delete App Reminder Page -->
    <string name="AppDetails">Appointment</string>
    <string name="DeleteApp">Delete Appointment</string>
...
